# pytest-parameterized-exmaple

./: LICENSE  main.py  pyproject.toml  test_main.py
