[tool.poetry]
name = "pytest-parameterized-exmaple"
version = "0.1.0"
description = ""
authors = ["umt0120"]
license = "MIT"
readme = "README.md"
packages = [{include = "pytest_parameterized_exmaple"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
